# 01_census_api_pm

./: er_diagram  pyproject.toml
01_census_api_pm/: 00-pull_all_datasets.py  01-pull_data_categories.py  02-pull_data_types.py  03-pull-location-categories.py  04-pull-locations.py  05-pull-stations.py  06-pull-data.py  07-chart-database.py
data/: data.csv  data_categories.csv  data_types.csv  datasets.csv  location_categories.csv  stations.csv
